<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mobihelp_conversation_close_confirmation_group"
    android:orientation="vertical"
    android:visibility="gone" >

    <TextView
        android:id="@+id/mobihelp_conversation_close_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:padding="8dp"
        android:scrollHorizontally="true"
        android:text="@string/mobihelp_close_confirmation_message"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/mobihelp_conversation_close_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/mobihelp_label_no" />

        <Button
            android:id="@+id/mobihelp_conversation_close_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/mobihelp_label_yes" />
    </LinearLayout>

</LinearLayout>
