<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobihelp_votingview"
    android:orientation="vertical"
    android:visibility="gone"
    android:layout_alignParentBottom="true"
    tools:context=".activity.SolutionArticleActivity" >

    <View
        android:id="@+id/mobihelp_voting_view_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mobihelp_article_thin_border"
        android:background="@color/mobihelp_divider_dark" />

    <TextView
        android:id="@+id/mobihelp_votingprompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="2"
        android:gravity="center"
        android:padding="4dp"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/mobihelp_solutions_vote_prompt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
	        android:id="@+id/mobihelp_upvote"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="8dp"
	        android:layout_marginLeft="20dp"
	        android:layout_weight="1"
	        android:text="@string/mobihelp_label_yes" />

        <Button
	        android:id="@+id/mobihelp_downvote"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="4dp"
	        android:layout_marginRight="20dp"
	        android:layout_marginLeft="8dp"
	        android:layout_weight="1"
	        android:text="@string/mobihelp_label_no" />
    </LinearLayout>
</LinearLayout>
